--- a/K_Bridge/Views/_ViewImports.cshtml
+++ b/K_Bridge/Views/_ViewImports.cshtml
@@ -3,7 +3,7 @@
 @using K_Bridge.Models.ViewModels
 @using K_Bridge.Infrastructure
 @using K_Bridge.Repositories
-
+@using K_Bridge.Helpers
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, K_Bridge
