Admin/Forums BaseUI

--- a/K_Bridge/Views/Shared/Components/AdminNavigationMenu/Default.cshtml
+++ b/K_Bridge/Views/Shared/Components/AdminNavigationMenu/Default.cshtml
@@ -19,7 +19,7 @@
         </a>
         <ul class="submenu collapse">
             <li class="nav-item mt-1">
-                <a class="nav-link nav-link-text" href="#">
+                <a class="nav-link nav-link-text" href="/Admin/Forums">
                     <img src="~/img/icon_develop_50.png" class="sidebar-subicon" />Lập trình
                 </a>
             </li>
