--- a/K_Bridge/Pages/Admin/Forums/Topics.cshtml
+++ b/K_Bridge/Pages/Admin/Forums/Topics.cshtml
@@ -57,7 +57,7 @@
                         <td>21/12/2024</td>
                         <td>21/12/2026</td>
                         <td>
-                            <a class="text-color-logo" href="/Admin/Forums/Topics"> <u>Chi tiết</u> </a>
+                            <a class="text-color-logo" href="/Admin/Forums/Topics/Post/Preview"> <u>Chi tiết</u> </a>
                         </td>
                     </tr>
                 }else if(i > 6)
@@ -71,7 +71,7 @@
                         <td>21/12/2024</td>
                         <td>21/12/2026</td>
                         <td>
-                            <a class="text-color-logo" href="/Admin/Forums/Topics"> <u>Chi tiết</u> </a>
+                            <a class="text-color-logo" href="/Admin/Forums/Topics/Post/Preview"> <u>Chi tiết</u> </a>
                         </td>
                     </tr>
                 }
@@ -86,7 +86,7 @@
                         <td>21/12/2024</td>
                         <td>21/12/2026</td>
                         <td>
-                            <a class="text-color-logo" href="/Admin/Forums/Topics"> <u>Chi tiết</u> </a>
+                            <a class="text-color-logo" href="/Admin/Forums/Topics/Post/Preview"> <u>Chi tiết</u> </a>
                         </td>
                     </tr>
                 }
