--- a/K_Bridge/Pages/Admin/Forums/Topics/Post/Preview.cshtml
+++ b/K_Bridge/Pages/Admin/Forums/Topics/Post/Preview.cshtml
@@ -92,7 +92,7 @@
             </select>
             <div style="max-width: 300px;" class="mt-2 justify-content-end">
                 <button type="button" style="color: #FFF0E6; background-color: #493422;"
-                    class="p-2 text-uppercase rounded-3 fs-6 w-100">
+                        class="p-2 text-uppercase rounded-3 fs-6 w-100" onclick="window.location.href='/Admin/Forums/Topics'">
                     Xác nhận
                 </button>
             </div>
