Create post + home
Tạo post theo topic
Đổ dữ liệu lên Home và modal create post

--- a/K_Bridge/Views/Post/Create.cshtml
+++ b/K_Bridge/Views/Post/Create.cshtml
@@ -55,6 +55,7 @@
                 <img src="/img/frame_end_content.png" style="width:50px; height:10px;" />
             </div>
         </div>
+        <input type="hidden" name="topicID" value="@ViewBag.TopicID" />
         <div class="w-100 flex justify-content-end">
             <button class="post-button p-2" type="submit">Đăng bài viết của bạn<button />
         </div>
