--- a/K_Bridge/Views/Home/Index.cshtml
+++ b/K_Bridge/Views/Home/Index.cshtml
@@ -41,7 +41,7 @@
         <div id="container-new-1">
             @foreach (var latestPost in ViewBag.LatestPost ?? Enumerable.Empty<Post>())
             {
-                <div class="row m-0 px-3 py-2">
+                <div class="row m-0 px-3 py-2" onclick="window.location.href='/Post/Details?post=@latestPost.ID'">
                     <div class="col-2 d-flex flex-column justify-content-center">
                         <div class="newest-card-stat py-2">0 Câu trả lời</div>
                         <div class="newest-card-stat py-2">@latestPost.ViewCount Lượt xem</div>
@@ -58,7 +58,7 @@
                         <div class="newest-card-des" style="font-size:13px;">@latestPost.Content</div>
                         <div class="d-flex justify-content-end mt-2">
                             <img src="/img/user.jpg" class="rounded-circle" alt="Avatar" width="30" height="30">
-                            <div class="newest-card-username mx-2">@latestPost.User.Username @GetTimeAgoHelper.GetTimeAgo(latestPost.CreatedAt)</div>
+                            <div class="newest-card-username mx-2">@latestPost.User.Username hỏi @GetTimeAgoHelper.GetTimeAgo(latestPost.CreatedAt)</div>
                         </div>
                     </div>
                 </div>
@@ -73,7 +73,7 @@
         <div class="d-flex flex-column mt-4 h-auto w-auto rounded-8 bg-main-color-background"
              style="border-top:5px solid @GetForumColorHelper.GetForumBackgroundColor(forum.ID);">
             <button id="toggle-cate-@forum.ID" class="flex-grow-0 border-main-color-logo border-bottom p-3 rounded-3 h-50 d-lg-inline-flex justify-content-lg-between">
-                <div class="text-uppercase text-decoration-none text-black" href="/Category/List?forum=Tài liệu tham khảo">@forum.Name</div>
+                <div class="text-uppercase text-decoration-none text-black" href="/Category/List?forum=@forum.Name">@forum.Name</div>
                 <img id="arrow-icon-cate-@forum.ID" src="/img/arrow_down.png" alt="arrow_down" />
             </button>
             @* Topic *@
