--- a/K_Bridge/Views/Post/Details.cshtml
+++ b/K_Bridge/Views/Post/Details.cshtml
@@ -58,115 +58,75 @@
                         41 Câu trả lời
                     </div>
                     <div class="d-flex text-color-header">
-                        <div class="d-flex justify-content-center align-items-center ">
-                            Sắp xếp theo:
-                        </div>
-                        <button class="d-flex px-2 justify-content-center align-items-center mx-4 rounded-pill" style="border: 1px solid #8E6745">
-                            <p class="m-0 p-0">Hữu ích nhất (Mặc định)</p>
-                            <img src="/img/icon_filter_forum_50.png" alt="Filter" width="15" height="15">
-                        </button>
-                    </div>
+<div class="form-group">
+    <label for="sortSelect">Sắp xếp theo:</label>
+    <select class="form-control" id="sortSelect">
+        <option selected>Hữu ích nhất</option>
+        <option>Mới nhất (gần nhất)</option>
+        <option>Đang xu hướng (nhiều người đồng tình nhất)</option>
+    </select>
+</div>                    </div>
                 </div>
-                <div class="row my-3 m-0" style="border-bottom: 1px solid #8E6745">
-                    <div class="col-lg-1 flex-column">
-                        <button class="m-1">
-                            <img src="~/img/like.png" alt="Like" />
-                        </button>
-                        <p class="mt-2 fs-6 fw-bold text-color-logo">-123</p>
-                        <button class="m-1">
-                            <img src="~/img/un_like.png" alt="Like" />
-                        </button>
-                    </div>
-                    <div class="col-lg-11">
-                        <div>
-                            Lectus quam id leo in vitae turpis massa. Justo laoreet sit amet cursus sit amet dictum sit amet. Aliquam ut porttitor leo a diam sollicitudin. Non arcu risus quis varius quam quisque id. Tempus iaculis urna id volutpat lacus laoreet non curabitur. Nec feugiat in fermentum posuere.
-                            <br />
-                            Quis enim lobortis scelerisque fermentum dui faucibus.
-                            Id eu nisl nunc mi ipsum faucibus vitae aliquet.
-                            <br />
-                            <br />
-                            Solution 1
-                            <br />
-                            Solution 2
-                            <br />
-                            Solution 3
-                            <br />
-                            Solution 4
-                            <br />
-                            Solution 5
+                @foreach (var reply in ViewBag.Reply ?? Enumerable.Empty<Forum>())
+                {
+                    <div class="row my-3 m-0" style="border-bottom: 1px solid #8E6745">
+                        <div class="col-lg-1 flex-column">
+                            <button class="m-1">
+                                <img src="~/img/like.png" alt="Like" />
+                            </button>
+                            <p class="mt-2 fs-6 fw-bold text-color-logo">-123</p>
+                            <button class="m-1">
+                                <img src="~/img/un_like.png" alt="Like" />
+                            </button>
+                        </div>
+                        <div class="col-lg-11">
+                            <div>
+                                @reply.Content
+                            </div>
+                        </div>
+                        <div class="d-flex justify-content-end mb-2">
+                            <img src="~/img/user.jpg" class="rounded-circle" alt="Avatar" width="30" height="30">
+                            <div class="newest-card-username mx-2">@reply.User.Username trả lời @GetTimeAgoHelper.GetTimeAgo(reply.CreatedAt)</div>
                         </div>
                     </div>
-                    <div class="d-flex justify-content-end mb-2">
-                        <img src="~/img/user.jpg" class="rounded-circle" alt="Avatar" width="30" height="30">
-                        <div class="newest-card-username mx-2">User1 hỏi 10 phút trước</div>
-                    </div>
-                </div>
-                <div class="row my-3 m-0" style="border-bottom: 1px solid #8E6745">
-                    <div class="col-lg-1 flex-column">
-                        <button class="m-1">
-                            <img src="~/img/like.png" alt="Like" />
-                        </button>
-                        <p class="mt-2 fs-6 fw-bold text-color-logo">-123</p>
-                        <button class="m-1">
-                            <img src="~/img/un_like.png" alt="Like" />
-                        </button>
-                    </div>
-                    <div class="col-lg-11">
-                        <div>
-                            Lectus quam id leo in vitae turpis massa. Justo laoreet sit amet cursus sit amet dictum sit amet. Aliquam ut porttitor leo a diam sollicitudin. Non arcu risus quis varius quam quisque id. Tempus iaculis urna id volutpat lacus laoreet non curabitur. Nec feugiat in fermentum posuere.
-                            <br />
-                            Quis enim lobortis scelerisque fermentum dui faucibus.
-                            Id eu nisl nunc mi ipsum faucibus vitae aliquet.
-                            <br />
-                            <br />
-                            Solution 1
-                            <br />
-                            Solution 2
-                            <br />
-                            Solution 3
-                            <br />
-                            Solution 4
-                            <br />
-                            Solution 5
-                        </div>
-                    </div>
-                    <div class="d-flex justify-content-end mb-2">
-                        <img src="~/img/user.jpg" class="rounded-circle" alt="Avatar" width="30" height="30">
-                        <div class="newest-card-username mx-2">User1 hỏi 10 phút trước</div>
-                    </div>
-                </div>
+
+                }
             }
             <div>
                 <p class="fs-5 text-color-logo">
                     Câu trả lời của bạn:
                 </p>
             </div>
-            <div class="border-2 rounded-3 border-main-color-header p-2 text-color-logo">
-                <div class="d-flex col-lg-3 justify-content-evenly fs-5">
-                    <button id="bold-btn" class="btn btn-outline-secondary m-2 px-2 py-1 rounded-3 hover-bold" style="min-width: 32px;">
-                        <span>B</span>
-                    </button>
-                    <button id="italic-btn" class="btn btn-outline-secondary m-2 px-2 py-1 rounded-3 hover-italic" style="min-width: 32px;">
-                        <span>I</span>
-                    </button>
-                    <button id="underline-btn" class="btn btn-outline-secondary m-2 px-2 py-1 rounded-3 hover-underline" style="min-width: 32px;">
-                        <span>U</span>
-                    </button>
-                    <button id="undo-btn" class="btn btn-outline-secondary m-2 px-2 py-1 rounded-3" style="min-width: 32px;">
-                        <span>↶</span>
-                    </button>
-                    <button id="redo-btn" class="btn btn-outline-secondary m-2 px-2 py-1 rounded-3" style="min-width: 32px;">
-                        <span>↷</span>
-                    </button>
+            <form method="post" asp-action="SubmitReply">
+                <input type="hidden" name="postId" value="@ViewBag.Post.ID" />
+                <div class="border-2 rounded-3 border-main-color-header p-2 text-color-logo">
+                    <div class="d-flex col-lg-3 justify-content-evenly fs-5">
+                        <button id="bold-btn" class="btn btn-outline-secondary m-2 px-2 py-1 rounded-3 hover-bold" style="min-width: 32px;">
+                            <span>B</span>
+                        </button>
+                        <button id="italic-btn" class="btn btn-outline-secondary m-2 px-2 py-1 rounded-3 hover-italic" style="min-width: 32px;">
+                            <span>I</span>
+                        </button>
+                        <button id="underline-btn" class="btn btn-outline-secondary m-2 px-2 py-1 rounded-3 hover-underline" style="min-width: 32px;">
+                            <span>U</span>
+                        </button>
+                        <button id="undo-btn" class="btn btn-outline-secondary m-2 px-2 py-1 rounded-3" style="min-width: 32px;">
+                            <span>↶</span>
+                        </button>
+                        <button id="redo-btn" class="btn btn-outline-secondary m-2 px-2 py-1 rounded-3" style="min-width: 32px;">
+                            <span>↷</span>
+                        </button>
+                    </div>
+                    <div class="border-top">
+                        <textarea id="content-area" class="focus form-control m-2 p-2" style="min-height: 100px; width: calc(100% - 1rem); resize: vertical;"
+                                  name="answerContent" placeholder="Viết câu trả lời tại đây..."></textarea>
+                    </div>
                 </div>
-                <div class="border-top">
-                    <textarea id="content-area" class="focus form-control m-2 p-2" style="min-height: 100px; width: calc(100% - 1rem); resize: vertical;" name="answer" placeholder="Viết câu trả lời tại đây..."></textarea>
-                </div>
-            </div>
-
             <div class="d-flex justify-content-end mt-2">
-                <button class="m-2 px-3 py-2 bg-main-color-layout text-color-logo rounded-3">Đăng câu trả lời của bạn</button>
+                <button type="submit" class="m-2 px-3 py-2 bg-main-color-layout text-color-logo rounded-3">Đăng câu trả lời của bạn</button>
             </div>
+            </form>
+
         </div>
     </div>
 </div>
