--- a/K_Bridge/Pages/Admin/Forums/Topics/Post/Preview.cshtml
+++ b/K_Bridge/Pages/Admin/Forums/Topics/Post/Preview.cshtml
@@ -85,7 +85,7 @@
                     <p>124 bài viết</p>
                 </div>
             </div>
-            <select style="width: 100%;" class="text-uppercase mb-3 fw-bold px-2 py-2" style="border: 2px solid #8E6745; color: #493422; background-color: #FFF0E6;">
+            <select class="text-uppercase mb-3 fw-bold px-2 py-2" style="width: 100%;border: 2px solid #8E6745; color: #493422; background-color: #FFF0E6;">
                 <option selected>Chưa phê duyệt</option>
                 <option value="approved" style="color: #FFF0E6; background-color: #00D462;" class="py-3">Phê duyệt</option>
                 <option value="rejected" style="color: #FFF0E6; background-color: #FF4141;" class="py-3">Từ chối</option>
