--- a/K_Bridge/wwwroot/css/Newest.css
+++ b/K_Bridge/wwwroot/css/Newest.css
@@ -47,3 +47,33 @@
     align-items: center;
     font-size: 15px;
 }
+
+#editor {
+    padding-left: 20px; /* Tạo khoảng trống cho số thứ tự và bullet */
+}
+
+    #editor ul, #editor ol {
+        margin: 0;
+        padding-left: 20px;
+    }
+
+    #editor ul {
+        list-style-type: disc; /* Hiển thị bullet cho danh sách không có thứ tự */
+    }
+
+    #editor ol {
+        list-style-type: decimal; /* Hiển thị số cho danh sách có thứ tự */
+    }
+
+.reply-content ol, .reply-content ul {
+    padding-left: 20px;
+    list-style-position: outside;
+}
+
+.reply-content ol {
+    list-style-type: decimal;
+}
+
+.reply-content ul {
+    list-style-type: disc;
+}
